syntax = "proto3";
package remoting;
import "github.com/rogeralsing/gam/actor/actor.proto";

message MessageEnvelope {
  string type_name = 1;
  bytes message_data = 2;
  actor.PID target = 3;
}

message MessageBatch {
  repeated MessageEnvelope envelopes = 1;
}

message Unit {}

service Remoting {
  rpc Receive (stream MessageBatch) returns (Unit) {}
}
